infra/backend/rs-01_template.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: kubernetes-node-server-replicaset
  namespace: api
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: kubernetes-node-server-replicaset-backend
  template:
    metadata:
      labels:
        app: kubernetes-node-server-replicaset-backend
    spec:
      serviceAccountName: backend-service-account
      containers:
        - name: kubernetes-node-server-replicaset-backend
          image: image_name_to_replace
          args: ["--spring.profiles.active=dev"]
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 100
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 100
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
