infra/backend/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiservice
  namespace: api
spec:
  selector:
    app: kubernetes-node-server-replicaset-backend
  ports:
    - port: 8080
      targetPort: 8080
