infra/backend/ingress_backend.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apiingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    #certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: apiservice
              servicePort: 8080
  # tls:
  #   - hosts:
  #       - public_hostname
  #     secretName: app-tls
